feat: add API find by id and find all books
